objects/ContractHistory__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_Cust_Id__c</fullName>
        <label>AOPS Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Extension_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension Name</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts1554724632</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Org__c</fullName>
        <formula>Account__r.Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Recordtype__c</fullName>
        <formula>Account__r.RecordType_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Recordtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract History</relationshipLabel>
        <relationshipName>Contract_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_requirements_for_deleted_or_disco__c</fullName>
        <label>What Add&apos;l action taken on disc&apos;d sku</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>None/Contract Silent</label>
                </value>
                <value>
                    <fullName>Replace with OD Alternate (when possible)</fullName>
                    <color>#FFFFFF</color>
                    <label>Replace with OD Alternate (when possible)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_allow_for_custom_cores__c</fullName>
        <description>Does written agreement allow for custom cores?</description>
        <label>Agreement allow for custom cores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No (Forced inheritance)</fullName>
                    <color>#FFFFFF</color>
                    <label>No (Forced inheritance)</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_provide_disco_on_spec_orders__c</fullName>
        <label>Agreement have discount on special order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_respon_based_on_cat_prod_assor__c</fullName>
        <label>Agreement/respon based on cat/prod assor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BSD</fullName>
                    <color>#FFFFFF</color>
                    <label>BSD</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <color>#FFFFFF</color>
                    <label>SP</label>
                </value>
                <value>
                    <fullName>SP Canada</fullName>
                    <color>#FFFFFF</color>
                    <label>SP Canada</label>
                </value>
                <value>
                    <fullName>United</fullName>
                    <color>#FFFFFF</color>
                    <label>United</label>
                </value>
                <value>
                    <fullName>Web</fullName>
                    <color>#FFFFFF</color>
                    <label>Web</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Any_other_callouts_from_legal__c</fullName>
        <label>Any other callouts from legal</label>
        <length>18252</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_Child_Core_Written_Agree_Lang__c</fullName>
        <label>Apply Child Core Written Agree Lang</label>
        <length>28000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_Parent_Cust_Core_Agreement_Lang__c</fullName>
        <label>Apply Parent Cust Core Agreement Lang</label>
        <length>28000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aprimo_Id__c</fullName>
        <externalId>true</externalId>
        <label>Aprimo Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_there_Child_SKU_Count_Limits__c</fullName>
        <label>Are there Child SKU Count Limits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_GP_SKU_Count_Limitations__c</fullName>
        <label>Are there GP SKU Count Limitations?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Minority_Spend_Requirements__c</fullName>
        <label>Does agreement stipulate Diversity Spend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Parent_SKU_Count_Limitations__c</fullName>
        <label>Are there Parent SKU Count Limitations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Rebates_Incentives__c</fullName>
        <label>Are there Rebates/Incentives?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_Standalone_SKU_Count_Limit__c</fullName>
        <label>Are there Standalone SKU Count Limit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basis_Level_for_Customer_Agreement__c</fullName>
        <label>Basis Level for Customer Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Child Account</fullName>
                    <color>#FFFFFF</color>
                    <label>Child Account</label>
                </value>
                <value>
                    <fullName>Grandparent Account</fullName>
                    <color>#FFFFFF</color>
                    <label>Grandparent Account</label>
                </value>
                <value>
                    <fullName>Great Grandparent</fullName>
                    <color>#FFFFFF</color>
                    <label>Great Grandparent</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Parent Account</fullName>
                    <color>#FFFFFF</color>
                    <label>Parent Account</label>
                </value>
                <value>
                    <fullName>Stand-Alone</fullName>
                    <color>#FFFFFF</color>
                    <label>Stand-Alone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Outcome__c</fullName>
        <label>Bid Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                    <color>#FFFFFF</color>
                    <label>Lost</label>
                </value>
                <value>
                    <fullName>Multiple Award</fullName>
                    <color>#FFFFFF</color>
                    <label>Multiple Award</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <color>#FFFFFF</color>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                    <color>#FFFFFF</color>
                    <label>Won</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_item_fee_language__c</fullName>
        <label>Bulk item fee language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDM_Emp_Id__c</fullName>
        <label>CDM_Emp_Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Emp_Id__c</fullName>
        <label>CLM_Emp_Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_tiered_discount_language__c</fullName>
        <label>CPD tiered discount language</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSF_Emp_Id__c</fullName>
        <label>CSF Emp Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Hierarchy_1__c</fullName>
        <label>CSF Hierarchy 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Hierarchy_2__c</fullName>
        <label>CSF Hierarchy 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Hierarchy_3__c</fullName>
        <label>CSF Hierarchy 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSF_Review_Date__c</fullName>
        <label>CSF Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Out_Auto_Force_Sub__c</fullName>
        <label>Are auto/forced subs permitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract Silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Out_Cost_Plus_Floor__c</fullName>
        <label>Agreemnt contain cost plus/floor pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract Silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Out_Sub_Language__c</fullName>
        <label>Auto-Sub Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Catalog_Product_Assortment__c</fullName>
        <label>Catalog/Product Assortment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>BSD</fullName>
                    <color>#FFFFFF</color>
                    <label>BSD</label>
                </value>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <color>#FFFFFF</color>
                    <label>SP</label>
                </value>
                <value>
                    <fullName>United</fullName>
                    <color>#FFFFFF</color>
                    <label>United</label>
                </value>
                <value>
                    <fullName>Web</fullName>
                    <color>#FFFFFF</color>
                    <label>Web</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Account_Name__c</fullName>
        <label>Child Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_Number__c</fullName>
        <label>Child Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Annual_Spend_Description__c</fullName>
        <label>Child Annual Spend Description</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Annual_Spend_Requirement_Amount__c</fullName>
        <label>Child Annual Spend Requirement Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Annual_Spend_Requirement__c</fullName>
        <label>Child Annual Spend Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Bid_Agreement_Number__c</fullName>
        <label>Child Bid Agreement Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Core_List_Capped_Price_Increase__c</fullName>
        <label>Child Core List Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate Core</fullName>
                    <color>#FFFFFF</color>
                    <label>Aggregate Core</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>SKU Level</fullName>
                    <color>#FFFFFF</color>
                    <label>SKU Level</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Core_SKU_Level_Capped_Price_Incr__c</fullName>
        <label>Child Core SKU Level Capped Price Incr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$ Cap</fullName>
                    <color>#FFFFFF</color>
                    <label>$ Cap</label>
                </value>
                <value>
                    <fullName>% Cap</fullName>
                    <color>#FFFFFF</color>
                    <label>% Cap</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract Silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Core_have_Capped_Price_Increase__c</fullName>
        <label>Child Core have Capped Price Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Cust_Core_Upd_Notice_Period_Other__c</fullName>
        <label>Child Cust Core Upd Notice Period Other</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Cust_Core_Upd_Notice_Period__c</fullName>
        <label>Child Cust Core Upd Notice Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>120 Days</fullName>
                    <color>#FFFFFF</color>
                    <label>120 Days</label>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                    <color>#FFFFFF</color>
                    <label>30 Days</label>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                    <color>#FFFFFF</color>
                    <label>45 Days</label>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                    <color>#FFFFFF</color>
                    <label>60 Days</label>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                    <color>#FFFFFF</color>
                    <label>90 Days</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No Limit</fullName>
                    <color>#FFFFFF</color>
                    <label>No Limit</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Cust_Core_Update_Notice_Type__c</fullName>
        <label>Child Cust Core Update Notice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract Silent</label>
                </value>
                <value>
                    <fullName>Mutual Written Consent</fullName>
                    <color>#FFFFFF</color>
                    <label>Mutual Written Consent</label>
                </value>
                <value>
                    <fullName>Notification Only</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Custom_Core_Discount_Basis__c</fullName>
        <label>Child Custom Core Discount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract Silent</label>
                </value>
                <value>
                    <fullName>WAPO Mark-Up</fullName>
                    <color>#FFFFFF</color>
                    <label>WAPO Mark-Up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Custom_Core_Discount_Percent__c</fullName>
        <label>Child Custom Core Discount Percent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Floor_Structure_Description__c</fullName>
        <label>Child Floor Structure Description</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Man_Ven_letter_req_for_Increase__c</fullName>
        <label>Child Man/Ven letter req for Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Pricing_Update_Frequency_Other__c</fullName>
        <label>Child Pricing Update Frequency Other</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Pricing_Update_Frequency__c</fullName>
        <label>Child Pricing Update Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                    <color>#FFFFFF</color>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Market Fluctuation</fullName>
                    <color>#FFFFFF</color>
                    <label>Market Fluctuation</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <color>#FFFFFF</color>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                    <color>#FFFFFF</color>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                    <color>#FFFFFF</color>
                    <label>Semi-Annually</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_SKU_Cap_Dollar_Amount__c</fullName>
        <label>Child SKU Cap Dollar Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_SKU_Cap_Percent_Amount__c</fullName>
        <label>Child SKU Cap Percent Amount</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Child_SKU_Count_Limitation__c</fullName>
        <label>Child SKU Count Limitation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_decr_req_to_be_applied_to_Cus_Core__c</fullName>
        <label>Child decr req to be applied to Cus Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clawback_Provision_Language__c</fullName>
        <label>Clawback Provision Language</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for SpringCM functionality</description>
        <label>Contract Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts61554724632</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Development_Negotiation_MGR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Development Negotiation MGR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1554724632</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>